@@ -1,3 +1,12 @@
+TAG: targetedalleleload-4-4-0-3
+DATE: 12/1/2010
+STAFF: jmason
+CHANGES:
+1) Add configuration variable and code to switch the load
+   to only process updates OR only create new records
+   the toggle is the boolean TAL_UPDATE (true = update only)
+2) Refactor logging of changes to clean up processing method
+
 TAG: targetedalleleload-4-4-0-2
 DATE: 11/30/2010
 STAFF: jmason
